[package]
name = "blue-pill-examples"
version = "0.1.0"
authors = ["Paul Sajna <sajattack@gmail.com>"]
edition = "2018"

[dev-dependencies]
stm32f1xx-hal = { version = "0.5", features = ["rt", "stm32f103", "medium" ] } 
panic-semihosting = "0.5"
st7735-lcd = "0.6"
embedded-graphics = "0.5"
cortex-m = "0.6"
cortex-m-rt = "0.6"
