[package]
name = "metro-m4-examples"
version = "0.1.0"
authors = ["Paul Sajna <sajattack@gmail.com>"]
edition = "2018"

[dependencies]
metro_m4 = { version = "0.13.0", features=["rt"] }
st7735-lcd = "0.10"

rtt-target = { version = "0.3.0", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features=["cortex-m"] }
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.2.0"
